Fixing layout issues on the card list

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -292,10 +292,10 @@ body {
 		}
 		
 		@media (min-width:$phone-landscape) {
-			width: 400px;
+			width: calc(100%/2 - 20px);
 			margin: {
-				left: auto;
-				right: auto;
+				right: 10px;
+				left: 10px;
 			}
 		}
 		
@@ -342,16 +342,45 @@ body {
 			@include dincond;
 			padding: {
 				left: 20px;
-				bottom: 30px;
+				bottom: 10px;
 			}
 			margin: 0px;
-			font-size: 53px;
+			font-size: 36px;
+			
+			@media (min-width:$tablet) {
+				font-size: 43px;
+				
+				padding: {
+					bottom: 30px;
+				}
+			}
+			
+			@media (min-width:$desktop) {
+				font-size: 53px;
+			}
 		}
 		
 		p {
 			padding: {
 				left: 20px;
-				top: 30px;
+				top: 10px;
+			}
+			
+			@media (min-width:$tablet) {
+				padding: {
+					top: 30px;
+				}
+			}
+		}
+		
+		@media (max-width:767px) {
+			.type {
+				margin-bottom: 5px;
+				font-size: 12px;
+			}
+			
+			.type::after {
+				margin-top: 5px;
 			}
 		}
 		
