--- a/css/main.scss
+++ b/css/main.scss
@@ -27,7 +27,7 @@ $content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
-$phone-landscape: 550px;
+$phone-landscape: 569px;
 $tablet: 740px;
 $desktop: 1120px;
 $desktop-lrg: 1800px;
